--- a/views/author-settings.ejs
+++ b/views/author-settings.ejs
@@ -1,44 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <title><%= title %></title>
-</head>
+  </head>
 
-<body>
-    <!-- Start of Bootstrap Container -->
-    <div class="container-fluid">
-        <div class="bg-dark text-white text-center py-5"
-            style="background-image: url('assets/download.jpeg'); background-size: cover; background-position: center;">
-            <h1 class="display-4">
-                <%= heading %>
-            </h1>
-        </div>
-        <form action="/author/settings" method="POST">
+  <body class="bg-light">
+    <!-- Page Header -->
+    <header
+      class="bg-dark text-white text-center py-5"
+      style="
+        background-image: url('/assets/download.jpeg');
+        background-size: cover;
+        background-position: center;
+      "
+    >
+      <div class="bg-dark bg-opacity-50 p-4 rounded">
+        <h1 class="display-4 fw-bold"><%= heading %></h1>
+      </div>
+    </header>
+
+    <!-- Main Content -->
+    <main class="container my-5">
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <!-- Author Settings Form -->
+          <form
+            action="/author/settings"
+            method="POST"
+            class="p-4 border rounded shadow-sm bg-white"
+          >
             <div class="mb-3">
-                <label for="author_name" class="form-label"><%= slot1 %></label>
-                <input type="text" class="form-control" id="author_name" name="author_name">
+              <label for="author_name" class="form-label"><%= slot1 %></label>
+              <input
+                type="text"
+                class="form-control"
+                id="author_name"
+                name="author_name"
+                required
+              />
             </div>
             <div class="mb-3">
-                <label for="title" class="form-label"><%= slot2 %></label>
-                <input type="text" class="form-control" id="title" name="title">
+              <label for="title" class="form-label"><%= slot2 %></label>
+              <input
+                type="text"
+                class="form-control"
+                id="title"
+                name="title"
+                required
+              />
             </div>
-            
-            <button type="submit" class="btn btn-dark"><%= button1 %></button>
-        </form>
+            <div class="d-grid">
+              <button type="submit" class="btn btn-dark"><%= button1 %></button>
+            </div>
+          </form>
 
-        <div class="d-flex justify-content-center ">
-            <button type="button" class="btn btn-dark" onclick="window.location.href='/author/blogs'"><%= button2 %></button>
+          <!-- Button to Blogs -->
+          <div class="d-grid mt-3">
+            <button
+              type="button"
+              class="btn btn-outline-dark"
+              onclick="window.location.href='/author/blogs'"
+            >
+              <%= button2 %>
+            </button>
+          </div>
         </div>
-    </div>
-  <!-- End of Bootstrap Container -->
-   <!-- Start of Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <!-- End of Bootstrap JavaScript -->
+      </div>
+    </main>
 
-</body>
-
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
