--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
               <p class="text-center text-muted mb-4">
                 If you can think it, you can pen it.
               </p>
-              <form action="authorize/login" method="POST">
+              <form action="/authorize/login" method="POST">
                 <div class="mb-3">
                   <label for="email" class="form-label">Email address</label>
                   <input
